feat: add pricing observability
